24 August 2007

* Don't even try to check for command child exit until its std{in,out,err} are
  closed. Hopefully fixes problems seen on Linux by Frank Terbeck.
* Be more consistent about lists when parsing configuration file.
* Don't try to strip duplicates from any lists instead of trying for some of
  them and not others.
* remove-header now accepts a list of headers in {}.

23 August 2007

* Yet another fetch reorganisation to try to make it clearer. Move tracking
  completed mail into fetch code, move mail and state stuff outside, and
  simplify the API and data structures. Also change the way the fetch poll loop
  works and fix some potential problems with IMAP-over-pipe. Hopefully few
  regressions...

18 August 2007

* Tidy up io code a little, break some big functions and split headers stuff
  into dedicated io.h. Also lift fd limit.
* Make SMTP delivery work again (blank lines were failing a length check in
  buffer_add from io_write). SF bug 1776786.

16 August 2007

* Remove header action now allows fnmatch patterns.
* Fix a silly bug with removing headers.
* Clarify headers/body again. The body offset is now the first byte of the
  body, so a mail of a single blank line has size == body == 1 (so, body
  size == 0 rather than 1). "\nBody" always had body == 1 and not having
  "\n" the same was confusing me.

15 August 2007

* A few POP3 servers supply an APOP cookie and then refuse the APOP command.
  Handle them with a "no-apop" flag to POP3 account statements to disable
  APOP. Reported by Frank Terbeck.

10 August 2007

* Combine append into write and exec into pipe even more to get rid of
  deliver-append.c and deliver-exec.c.
* add-from on stdout delivery is gone, an acceptable from line can be prepended
  using rewrite.

06 August 2007

* TDB is now a mandatory dependency.

03 August 2007

* Fetching from mboxes.

02 August 2007

* Handle IMAP mails properly if they have no trailing newline.