@@ -1,3 +1,7 @@
+25 August 2007
+
+* Fix queue-high == 1 to not hang after first mail.
+
 24 August 2007
 
 * Don't even try to check for command child exit until its std{in,out,err} are
@@ -561,4 +565,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.147 2007-08-24 19:48:51 nicm Exp $
+$Id: CHANGES,v 1.148 2007-08-25 10:57:16 nicm Exp $
